[package]
name = "uniswap_get_tokens"
version = "0.1.0"
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
revm.workspace = true
database = { workspace = true, features = ["std", "alloydb"] }

# tokio
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }

# alloy
alloy-sol-types = { version = "0.8.2", default-features = false, features = [
    "std",
] }
alloy-eips = "0.9.2"
alloy-provider = "0.9.2"

# mics
anyhow = "1.0.89"

# adds on dependencies for db
rusqlite = "0.33.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"

# adds on dependencies for serialize/deserialize
serde = "1.0"
serde_derive = "1.0.188"

# adds on dependencies for read config and terminal command
toml = "0.7.5"
clap = { version = "4.4.6", features = ["derive"] }

# adds on for Solidity address type check sum
ethers = "2.0"

# adds on for logging
fern = "0.6"
log = "0.4"
chrono = "0.4.39"

# adds on for API server
warp = { version = "0.3", features = ["tls"] }
bytes = "1.1"
